# Proyecto-Servicio-Social

./: likelihood_final.ipynb  red_final(1).ipynb  red_final.ipynb  red_sin_preprocesamiento_final.ipynb
LXe/: CMakeLists.txt  cerenkov.mac
LXe/include/: LXeEventAction.hh  LXeEventMessenger.hh  LXeHistoManager.hh  LXeMainVolume.hh  LXePrimaryGeneratorAction.hh  LXePrimaryGeneratorMessenger.hh
LXe/src/: LXeDetectorConstruction.cc  LXeDetectorMessenger.cc  LXeEventAction.cc  LXeHistoManager.cc  LXeMain.cc  LXeMainVolume.cc  LXePMTHit.cc  LXePMTSD.cc  LXePrimaryGeneratorAction.cc  LXePrimaryGeneratorMessenger.cc  LXeRunAction.cc  LXeSteppingAction.cc  LXeTrackingAction.cc
LXe_build/: CMakeCache.txt  LXe  LXe.mac  LXe_C.mac  Makefile  P.csv  c.mac  cerenkov.mac  cerenkov_mod.mac  cmake_install.cmake  vis.mac
include/: LXePMTHit.hh  LXeRunAction.hh
